<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_2sdp"
        android:background="@color/bottomBarOrange" />

    <LinearLayout
        android:paddingTop="@dimen/_3sdp"
        android:paddingBottom="@dimen/_3sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBlack"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/bottomBarNomen"
            style="@style/TextViewStyleRegular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/_5sdp"
            android:text="@string/basis"
            android:textColor="@color/text_parrotGreen" />

        <TextView
            android:id="@+id/bottomBarVerb"
            style="@style/TextViewStyleRegular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/_5sdp"
            android:text="@string/personen"
            android:textColor="@color/text_parrotGreen" />

        <TextView
            android:id="@+id/bottomBarSatz"
            style="@style/TextViewStyleRegular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/_5sdp"
            android:text="@string/orte"
            android:textColor="@color/text_parrotGreen" />

    </LinearLayout>

</LinearLayout>