<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlack"
    android:orientation="vertical">

    <include layout="@layout/include_topbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingBottom="@dimen/_20sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:paddingStart="@dimen/_10sdp"
        android:paddingTop="@dimen/_50sdp">

        <TextView
            style="@style/TextViewStyleRegular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_6sdp"
            android:text="@string/deine_bewertung"
            android:textColor="@color/textYellow"
            android:textSize="@dimen/_12ssp" />

        <TextView
            android:id="@+id/txtPoints"
            style="@style/TextViewStyleRegular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_15sdp"
            android:background="@color/bgYellow"
            android:gravity="center_vertical"
            android:minLines="3"
            android:paddingBottom="@dimen/_13sdp"
            android:paddingEnd="@dimen/_5sdp"
            android:paddingStart="@dimen/_5sdp"
            android:paddingTop="@dimen/_13sdp"
            android:text="Nun ja. Ausrechend.\nKannst du noch  besser werden? \nJa,du kannst!"
            android:textSize="@dimen/_12ssp" />

        <TextView
            style="@style/TextViewStyleRegular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_6sdp"
            android:text="@string/dein_tempo"
            android:textColor="@color/textYellow"
            android:textSize="@dimen/_12ssp" />

        <TextView

            android:id="@+id/txtSpeed"
            style="@style/TextViewStyleRegular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_15sdp"
            android:background="@color/bgYellow"
            android:gravity="center_vertical"
            android:minLines="3"
            android:paddingBottom="@dimen/_13sdp"
            android:paddingEnd="@dimen/_5sdp"
            android:paddingStart="@dimen/_5sdp"
            android:paddingTop="@dimen/_13sdp"
            android:text="Nun ja. Ausrechend.\nKannst du noch  besser werden? \nJa,du kannst!"
            android:textSize="@dimen/_12ssp" />

        <TextView
            style="@style/TextViewStyleRegular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_6sdp"
            android:text="@string/deine_fehler"
            android:textColor="@color/textYellow"
            android:textSize="@dimen/_12ssp" />

        <TextView
            android:id="@+id/txtWrongClick"
            style="@style/TextViewStyleRegular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bgYellow"
            android:gravity="center_vertical"
            android:minLines="3"
            android:paddingBottom="@dimen/_13sdp"
            android:paddingEnd="@dimen/_5sdp"
            android:paddingStart="@dimen/_5sdp"
            android:paddingTop="@dimen/_13sdp"
            android:text="Nun ja. Ausrechend.\nKannst du noch  besser werden? \nJa,du kannst!"
            android:textSize="@dimen/_12ssp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imgNext"
        android:paddingStart="@dimen/_5sdp"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:src="@drawable/ic_next_yellow" />
</LinearLayout>